--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,75 @@
 #dataGrid {
-    height: 500px;
-    width: 1400px;
-    float: left;
+  height: 500px;
+  width: 1400px;
+  float: left;
+}
+#Report {
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  color: #fff;
+  background-color: #4410a3;
+  border-radius: 5px;
+  margin-left: 1250px;
+  margin-top: 5px;
 }
 #selectBox {
-    width: 400px;
-    margin-top: 25px;
-    float: left;
-} 
+  width: 400px;
+  margin-top: 10px;
+  float: left;
+}
 .button {
-    display: inline-block;
-    padding: 10px 15px;
-    font-size: 14px;
-    cursor: pointer;
-    text-align: center;
-    color: #fff;
-    background-color: #4410a3;
-    border-radius: 5px;
-    margin-left: 20px;
-    margin-top: 25px;
-  }
-  
-  .button:active {
-    background-color: #04AA6D;
-    transform: translateY(4px);
-  }
-  
+  display: inline-block;
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  text-align: center;
+  color: #fff;
+  background-color: #4410a3;
+  border-radius: 5px;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+.button:active {
+  background-color: #04aa6d;
+  transform: translateY(4px);
+}
+
 #tabPanel {
-    width: 1400px;
-    margin-top: 30px;
-    margin-bottom: 5px;
+  width: 1400px;
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+
+table {
+  width: 800px;
+  border-collapse: collapse;
+  margin-top: 20px;
+  float: left;
+  margin-right: 30px;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+img{
+  margin-top: 20px;
+  width: 400px;
+  height: 375px;
+}
+
+#home{
+  margin-top: 30px;
+  margin-left: 5px;
 }
